# libcontort

./: .clang-tidy  meson.build  runClangTidy.py
include/: meson.build
include/contort/: contort.hxx  defs.hxx  eventLoop.hxx  mainLoop.hxx  screen.hxx  textLayout.hxx  utils.hxx  widget.hxx  widgets.hxx
include/contort/widgets/: text.hxx
src/: decoration.cxx  eventLoop.cxx  mainLoop.cxx  meson.build  screen.cxx  textLayout.cxx  utils.cxx  widget.cxx
src/widgets/: meson.build  text.cxx
test/: hello.cxx  meson.build
